--- a/src/CSS/CardAntDesign.css
+++ b/src/CSS/CardAntDesign.css
@@ -7,3 +7,27 @@
   max-width: 1200px;
   padding: 0 15px;
 }
+
+
+.CardAntDesign .titleHolder {
+  text-align: center;
+  position: relative;
+  padding: 0 0 20px;
+  margin: 0 0 40px;
+}
+
+.CardAntDesign .titleHolder h2 {
+  font-size: 28px;
+  margin: 0;
+}
+
+.CardAntDesign .titleHolder:after {
+  transform: translateX(-50%);
+  content: "";
+  background: #1890ff;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  height: 3px;
+  width: 50px;
+}
