--- a/src/CSS/HeaderAntDesign.css
+++ b/src/CSS/HeaderAntDesign.css
@@ -1,6 +1,6 @@
 .ant-layout-header,
-.ant-layout-header .ant-menu-item{
-    font-family: "Poppins" !important;
+.ant-layout-header .ant-menu-item {
+  font-family: "Poppins" !important;
 }
 
 .ant-layout-header .logo {
@@ -8,6 +8,133 @@
   color: #ffffff;
 }
 
-.ant-layout-header .ant-menu-horizontal{
-    justify-content: end;
+.ant-layout-header .ant-menu-horizontal {
+  justify-content: end;
+}
+
+.ant-anchor-ink {
+  display: none !important;
+}
+
+.ant-anchor-ink {
+  display: none;
+}
+
+.ant-anchor-wrapper .ant-anchor .ant-anchor-link:first-of-type {
+  padding-inline: 20px;
+}
+
+.ant-anchor-wrapper .ant-anchor .ant-anchor-link {
+  padding-block: unset;
+  padding-inline: 20px;
+}
+
+.ant-anchor-wrapper .ant-anchor .ant-anchor-link-title {
+  color: #fff;
+}
+
+.ant-anchor-link {
+  padding-block: unset;
+  padding-inline: unset;
+  padding: 0 20px;
+  line-height: 1.4;
+  position: relative;
+}
+
+.ant-anchor-link:before,
+.ant-anchor-link:after {
+  content: "";
+  background: #1890ff;
+  width: 1px;
+  position: absolute;
+  top: 2px;
+  bottom: 2px;
+  left: 30%;
+  opacity: 0;
+  transition: all 0.3s linear;
+}
+
+.ant-anchor-link:after {
+  left: auto;
+  right: 30%;
+}
+
+.ant-anchor-link.ant-anchor-link-active:before,
+.ant-anchor-link:hover:before {
+  left: 5%;
+  opacity: 1;
+}
+
+.ant-anchor-link.ant-anchor-link-active:after,
+.ant-anchor-link:hover:after {
+  right: 5%;
+  opacity: 1;
+}
+
+.ant-anchor {
+  justify-content: end;
+  color: #fff;
+}
+
+.ant-anchor-wrapper-horizontal::before,
+.ant-anchor::before {
+  display: none;
+}
+
+.ant-affix {
+  top: unset !important;
+}
+
+.layout header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 99;
+}
+
+.mobileVisible {
+  display: none;
+}
+
+.mobileHidden {
+  display: block;
+}
+
+@media only screen and (max-width: 767px) {
+  .mobileVisible {
+    display: block;
+  }
+
+  .mobileHidden {
+    display: none;
+  }
+
+  #HeaderAntDesign {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .ant-anchor-wrapper .ant-anchor .ant-anchor-link-title {
+    color: #000000;
+    line-height: 2;
+  }
+
+  .ant-anchor-link:before,
+  .ant-anchor-link:after {
+    display: none;
+  }
+
+  .ant-anchor-wrapper
+    .ant-anchor
+    .ant-anchor-link-active
+    > .ant-anchor-link-title {
+    color: #1890ff;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  .ant-drawer-content-wrapper {
+    width: 100% !important;
+    max-width: 280px;
+  }
 }
